# cowl

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md
bench/: CMakeLists.txt
bench/src/: main.c
cmake/: FindSphinx.cmake
data/: .gitignore  example_pizza.owl  test_import.owl  test_onto.owl
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
docs/_static/: style.css
docs/_templates/: footer.html
docs/about/: index.rst
docs/api/: config.rst  index.rst
docs/api/base/: CowlIRI.rst  CowlLiteral.rst  CowlObject.rst  CowlString.rst  index.rst  numeric.rst  text.rst
docs/api/collections/: UHash.rst  UVec.rst  Vector.rst  hash.rst  index.rst  vector.rst
docs/api/config/: index.rst
docs/api/crud/: error.rst  index.rst  manager.rst  query_edit.rst  read.rst  write.rst
docs/api/io/: CowlError.rst  CowlImportsLoader.rst  CowlLogger.rst  CowlParser.rst  crud.rst  error.rst  import.rst  index.rst  logging.rst  parsing.rst  reading.rst
docs/api/model/: index.rst  literal.rst
docs/api/model/annot/: index.rst  values.rst
docs/api/model/axiom/: annot.rst  assert.rst  cls_exp.rst  data_prop.rst  decl_def.rst  index.rst  keys.rst  obj_prop.rst
docs/api/model/base/: collections.rst  index.rst  number.rst  object.rst  string.rst
docs/api/model/cls_exp/: boolean.rst  data_restr.rst  enum.rst  index.rst  obj_restr.rst
docs/api/model/data_range/: boolean.rst  enum.rst  index.rst  restr.rst
docs/api/model/primitive/: annot_prop.rst  class.rst  data_prop.rst  datatype.rst  index.rst  individual.rst  iri.rst  obj_prop.rst
docs/api/model/prop/: data_prop.rst  index.rst  inv_obj_prop.rst  obj_prop.rst
docs/api/model/vocab/: index.rst  owl.rst  rdf.rst  rdfs.rst  xsd.rst
docs/api/owl/: index.rst
docs/api/owl/annot/: CowlAnnotAssertAxiom.rst  CowlAnnotPropDomainAxiom.rst  CowlAnnotPropRangeAxiom.rst  CowlAnnotValue.rst  CowlAnnotation.rst  CowlSubAnnotPropAxiom.rst
docs/api/owl/axiom/: CowlAxiom.rst  CowlClsAssertAxiom.rst  CowlDataPropAssertAxiom.rst  CowlDataPropDomainAxiom.rst  CowlDataPropRangeAxiom.rst  CowlDatatypeDefAxiom.rst  CowlDeclAxiom.rst  CowlDisjUnionAxiom.rst  CowlFuncDataPropAxiom.rst  CowlHasKeyAxiom.rst  CowlInvObjPropAxiom.rst  CowlNAryClsAxiom.rst  CowlNAryDataPropAxiom.rst  CowlNAryIndAxiom.rst  CowlNAryObjPropAxiom.rst  CowlObjPropAssertAxiom.rst  CowlObjPropCharAxiom.rst  CowlObjPropDomainAxiom.rst  CowlObjPropRangeAxiom.rst  CowlSubClsAxiom.rst  CowlSubDataPropAxiom.rst  CowlSubObjPropAxiom.rst  CowlSubObjPropChainAxiom.rst
docs/api/owl/cls_exp/: CowlClsExp.rst  CowlDataCard.rst  CowlDataHasValue.rst  CowlDataQuant.rst  CowlNAryBool.rst  CowlObjCard.rst  CowlObjCompl.rst  CowlObjHasSelf.rst  CowlObjHasValue.rst  CowlObjOneOf.rst  CowlObjQuant.rst
docs/api/owl/data_range/: CowlDataCompl.rst  CowlDataOneOf.rst  CowlDataRange.rst  CowlDatatypeRestr.rst  CowlNAryData.rst
docs/api/owl/entity/: CowlAnnotProp.rst  CowlClass.rst  CowlDatatype.rst  CowlEntity.rst  CowlObjProp.rst
docs/api/owl/ind/: CowlAnonInd.rst  CowlIndividual.rst  CowlNamedInd.rst
docs/api/owl/ontology/: CowlIterator.rst  CowlOntology.rst  CowlOntologyID.rst  CowlOntologyId.rst
docs/api/owl/primitive/: CowlDataProp.rst  index.rst
docs/api/owl/prop_exp/: CowlDataPropExp.rst  CowlInvObjProp.rst  CowlObjPropExp.rst
docs/api/owl/vocab/: CowlOWLVocab.rst  CowlRDFSVocab.rst  CowlRDFVocab.rst  CowlXSDVocab.rst  index.rst
docs/doxygen/: alias.py
docs/howto/: examples.rst  howto.rst  index.rst
docs/pages/: examples.md  howto.md
docs/style/: footer.html  layout.xml  style.css
examples/: .clang-format  00_base.c  01_errors_imports.c  02_query.c  03_recursive_query.c  04_advanced_query.c  04_editing.c  05_istream.c  06_istream.c  06_ostream.c  07_ostream.c  CMakeLists.txt  ex_00_base.c  ex_01_errors_imports.c  ex_02_query.c  ex_03_recursive_query.c
examples/src/: 00_base.c  01_errors.c  01_errors_imports.c  02_query.c  03_recursive_query.c  04_advanced_query.c  05_editing.c  06_istream.c  07_ostream.c
include/: cowl.h  cowl_alloc.h  cowl_annot_assert_axiom.h  cowl_annot_prop.h  cowl_annot_prop_domain_axiom.h  cowl_annot_prop_range_axiom.h  cowl_annot_value.h  cowl_annot_value_type.h  cowl_annotation.h  cowl_annotation_vec.h  cowl_anon_ind.h  cowl_anon_individual.h  cowl_any.h  cowl_api.h  cowl_attrs.h  cowl_axiom.h  cowl_axiom_filter.h  cowl_axiom_flags.h  cowl_axiom_index.h  cowl_axiom_type.h  cowl_base_types.h  cowl_card_type.h  cowl_change.h  cowl_change_handler.h  cowl_char_axiom_type.h  cowl_class.h  cowl_class_exp.h  cowl_class_exp_type.h  cowl_cls_assert_axiom.h  (+138 more)
src/formats/functional/reader/: CMakeLists.txt  cowl_func_reader.c  cowl_functional.l  cowl_functional.y
src/parser/functional/: CMakeLists.txt  cowl_func_parser.c  cowl_func_parser.h  cowl_functional.l  cowl_functional.y  cowl_functional_lexer.l  cowl_functional_parser.y
src/reader/functional/: CMakeLists.txt  cowl_func_reader.c  cowl_functional.l  cowl_functional.y
test/: CMakeLists.txt  bench.c  cowl_iri_tests.c  cowl_iri_tests.h  cowl_leak_debug.c  cowl_leak_debug.h  cowl_ontology_tests.c  cowl_ontology_tests.h  cowl_parser_tests.c  cowl_parser_tests.h  cowl_string_tests.c  cowl_string_tests.h  cowl_test_utils.h  test.c
test/leak/: cowl_leak_debug.c  cowl_leak_debug.h
test/src/: cowl_axiom_tests.c  cowl_axiom_tests.h  cowl_formats_tests.c  cowl_formats_tests.h  cowl_iri_tests.c  cowl_iri_tests.h  cowl_manager_tests.c  cowl_manager_tests.h  cowl_ontology_tests.c  cowl_ontology_tests.h  cowl_string_tests.c  cowl_string_tests.h  cowl_test_utils.h  cowl_version_tests.c  cowl_version_tests.h  main.c
test/tests/: cowl_iri_tests.c  cowl_iri_tests.h  cowl_manager_tests.c  cowl_manager_tests.h  cowl_ontology_tests.c  cowl_ontology_tests.h  cowl_parser_tests.c  cowl_reader_tests.c  cowl_reader_tests.h  cowl_string_tests.c  cowl_string_tests.h  cowl_test_utils.c  cowl_test_utils.h  cowl_version_tests.c  cowl_version_tests.h
tools/: CMakeLists.txt  stats.c
tools/src/: stats.c
(+493 files in other folders)
