# Files and directories

set(DOCS_IMAGES_DIRECTORY "${COWL_DOCS_DIR}/img")
set(DOCS_OUTPUT_DIRECTORY "${COWL_OUTPUT_DIR}/docs")
set(SPHINX_INPUT_DIRECTORY "${COWL_DOCS_DIR}")
set(COWL_ICON "${DOCS_IMAGES_DIRECTORY}/cowl_logo.png")

# Doxygen configuration

set(DOXYGEN_FULL_PATH_NAMES NO)
set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES)
set(DOXYGEN_TOC_INCLUDE_HEADINGS 0)
set(DOXYGEN_DISTRIBUTE_GROUP_DOC YES)
set(DOXYGEN_TYPEDEF_HIDES_STRUCT YES)
set(DOXYGEN_FORCE_LOCAL_INCLUDES YES)
set(DOXYGEN_MAX_INITIALIZER_LINES 0)
set(DOXYGEN_WARN_NO_PARAMDOC YES)
set(DOXYGEN_EXCLUDE_SYMBOLS "__*")
set(DOXYGEN_EXAMPLE_PATTERNS "*.c")
set(DOXYGEN_COLS_IN_ALPHA_INDEX 2)
set(DOXYGEN_IGNORE_PREFIX "COWL_" "cowl_" "Cowl" "COWL")
set(DOXYGEN_HTML_DYNAMIC_SECTIONS YES)
set(DOXYGEN_TOC_EXPAND YES)
set(DOXYGEN_GENERATE_TREEVIEW YES)
set(DOXYGEN_GENERATE_XML YES)
set(DOXYGEN_MACRO_EXPANSION YES)
set(DOXYGEN_INCLUDE_PATH ${COWL_PUBLIC_HEADERS_DIRS})
set(DOXYGEN_OUTPUT_DIRECTORY "${DOCS_OUTPUT_DIRECTORY}/doxygen")
set(DOXYGEN_XML_OUTPUT_DIRECTORY "${DOXYGEN_OUTPUT_DIRECTORY}/xml")

# Documentation targets

find_package(Doxygen)

if(DOXYGEN_FOUND)
    find_package(Sphinx)
    set(DOCS_TARGET_NAME cowl-docs)

    if(SPHINX_FOUND)
        set(DOXYGEN_TARGET_NAME cowl-doxygen)
        sphinx_add_docs("${DOCS_TARGET_NAME}" "${SPHINX_INPUT_DIRECTORY}"
                        COMMENT "Generate documentation via Sphinx")
        add_dependencies("${DOCS_TARGET_NAME}" "${DOXYGEN_TARGET_NAME}")
    else()
        set(DOXYGEN_TARGET_NAME "${DOCS_TARGET_NAME}")
    endif()

    doxygen_add_docs("${DOXYGEN_TARGET_NAME}" ${COWL_PUBLIC_HEADERS}
                     COMMENT "Generate documentation via Doxygen")
endif()
